format aside, comment out svg

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 <footer> 
     <p> This is my WEB-site</p> 
 </footer> 
-<svg>
+<!--<svg>
     <symbol id='squareboxcentercircle' viewbox='0 0 100 100'> 
         <rect x="30" y="10" rx="10" ry="10" width="30" height="30" stroke="#4a417b" fill="transparent" stroke-width="5"/>
         <circle cx="45" cy="25" r="8" stroke="#73205a" fill="transparent" stroke-width='3'/>
     </symbol>
-</svg>
+</svg>-->
 </body>
 
 </html>
